<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="ki_miiin_._"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_account"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="김기민"
        android:textColor="@color/black" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
        android:id="@+id/number_layout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2">

        <TextView
            android:id="@+id/post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/follower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/post"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/follower"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/following"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/profileEdt_btn"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:background="@drawable/btn_shape"
        android:text="@string/profile_edt"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <View
        android:id="@+id/guide1_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorDivision"
        app:layout_constraintTop_toBottomOf="@+id/profileEdt_btn"/>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal"
        android:numColumns="3"
        app:layout_constraintTop_toBottomOf="@+id/guide1_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

<!--        <ImageView
            android:id="@+id/feed1_img"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_account" />
        <ImageView
            android:id="@+id/feed2_img"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_account" />
        <ImageView
            android:id="@+id/feed3_img"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_account" />-->


    </GridView>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPhoto_fbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:maxImageSize="30dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/colorSignupNumber"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>